--- a/ISYE_6644_Mini_Project_1.ipynb
+++ b/ISYE_6644_Mini_Project_1.ipynb
@@ -30,6 +30,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NRexKkqzod22"
+      },
+      "source": [
+        "# The Spread of a Flu Simulated through Python\n",
+        "\n",
+        "*Michael Barnhart, Valerie Schnapp, and Jonathon Yang*\n",
+        "\n",
+        "-----"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1I0vDEkqeWIH"
       },
       "source": [
@@ -1132,7 +1145,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b0pkk7gojVj6",
-        "outputId": "146413fa-e1d0-4d2b-9167-cde212ac5de6"
+        "outputId": "d6fc5309-9aa1-425f-ef02-2e9fc858e18a"
       },
       "source": [
         "from scipy.stats import geom\n",
@@ -1140,7 +1153,7 @@
         "prob = geom.cdf(3, p)\n",
         "print(\"The probability that Tommy will infect another student in his 3 days of contagiousness is {}%\".format(prob*100))"
       ],
-      "execution_count": 40,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
